RESOLVED FIXED 90508
[Shadow] A 'selectstart' event fired on distributed nodes should not be stopped at shadow boundary of the parent shadow host.
https://bugs.webkit.org/show_bug.cgi?id=90508
Summary [Shadow] A 'selectstart' event fired on distributed nodes should not be stopp...
Hayato Ito
Reported 2012-07-03 17:12:21 PDT
Suppose the following DOM tree: <div id='host'> [shadow-root] <content></content> <div id='distributed-node'></div> </div> Then, an event of 'selectstart', which is one of the events which mut always be stopped at the nearest shadow boundary [*1], is dispatched on #distributed-node. Let's assume it is bubbling up. In that case, #host should receive the event. But the event is wrongly stopped at the shadow boundary of #host. #host won't receive the event. *1) spec https://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html#events-that-are-always-stopped), i
Attachments
wip. (11.24 KB, patch)
2012-07-16 19:27 PDT, Hayato Ito
no flags
should not stop (9.23 KB, patch)
2012-07-17 01:39 PDT, Hayato Ito
no flags
Hayato Ito
Comment 1 2012-07-03 17:20:37 PDT
This is not a specific issue to 'selectstart' event. See bug 90436 also.
Hayato Ito
Comment 2 2012-07-16 19:27:09 PDT
Hayato Ito
Comment 3 2012-07-16 19:31:35 PDT
I have to merge this patch with bug 90436. In theoretically, both patches are independent of each other. But there wil be conflicts in code. I have to resolve it.
Hayato Ito
Comment 4 2012-07-17 01:39:11 PDT
Created attachment 152717 [details] should not stop
WebKit Review Bot
Comment 5 2012-07-18 19:40:09 PDT
Comment on attachment 152717 [details] should not stop Clearing flags on attachment: 152717 Committed r123064: <http://trac.webkit.org/changeset/123064>
WebKit Review Bot
Comment 6 2012-07-18 19:40:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.